plugins {
	id 'org.springframework.boot' version '2.3.1.RELEASE'
	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
	id 'java'
}

group = 'org.insaneheadoflettuce'
version = '0.0.1-SNAPSHOT'

sourceCompatibility = 14
targetCompatibility = 14
def commonArguments = '--enable-preview'

tasks.withType(JavaCompile) { options.compilerArgs += commonArguments }
tasks.withType(Test) { jvmArgs += commonArguments }
tasks.withType(JavaExec) { jvmArgs += commonArguments }

repositories {
	mavenCentral()
}

dependencies {
	compile group: 'com.google.guava', name: 'guava', version: '29.0-jre'
	compile group: 'com.opencsv', name: 'opencsv', version: '5.2'
	compile group: 'io.micrometer', name: 'micrometer-core', version: '1.5.2'
	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
	compile group: 'commons-validator', name: 'commons-validator', version: '1.6'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	runtimeOnly 'com.h2database:h2'
	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
}

test {
	useJUnitPlatform()
}
